[tool.poetry]
name = "snyker"
version = "0.1.0"
description = ""
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-black = "^0.3.7"
pytest-chalice = "^0.0.4"
chalice = "^1.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
