[tool.poetry]
name = "snyker"
version = "0.1.0"
description = ""
authors = ["Gareth Rushgrove <gareth@morethanseven.net>"]

[tool.poetry.dependencies]
python = "^3.7"
aws-lambda-context = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest-black = "^0.3.7"
pytest-chalice = "^0.0.4"
chalice = "^1.12"
pytest-isort = "^0.3.1"
pytest-cov = "^2.8.1"
pytest-mypy = "^0.4.2"
pytest-pylint = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
